Dashboard: improved visibility and fixed layout-breaking issues in activity feed (#183).

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -33,6 +33,16 @@
 
 .list-group .list-group-item.timeline-item {
 	overflow: visible;
+	padding: 0;
+	margin: 10px 0;
+
+	@media (min-width: 1200px) {
+		.card-detail-text { text-align: right; }
+	}
+
+	.row { padding: 2px 0; }
+	&:first-child { margin-top: 0; }
+	&:last-child { margin-bottom: 0; }
 }
 
 .panel-header-label {
@@ -200,4 +210,9 @@ a.column-sorter {
 .simple-filter {
 	h5 { margin: 0; }
 	.form-group { margin: 0; padding: 0 5px; }
+}
+
+.card-detail-text {
+	font-size: 14px;
+	color: #999;
 }
